tests/negative/scope/type-defined-twice/err.expected
ERROR:
The object `p:Foo` is defined for a second time at beta.smol:3:11-3:14:
         2 | 
         3 | interface Foo {}
           |           ^^^

The first definition was at alpha.smol:3:7-3:10:
         2 | 
         3 | class Foo {}
           |       ^^^
